--- a/main.html
+++ b/main.html
@@ -34,8 +34,17 @@
                 <li class="navbar__menu__item">CONTACT</li>
             </ul>
         </nav>
+        <!-- home -->
+        <section id="home">
+            <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
+            <h1 class="home__title">Hello,<br/> I'm Greeense</h1>
+            <h2 class="home__description">
+                Engineer
+            </h2>
+            <button class="home__contact">Contact me!</button>
+        </section>
         <!-- about -->
-        <section id="abount"></section>
+        <section id="about"></section>
         <!-- skills -->
         <section id="skills"></section>
         <!-- work -->
