--- a/main.html
+++ b/main.html
@@ -44,7 +44,41 @@
             <button class="home__contact">Contact me!</button>
         </section>
         <!-- about -->
-        <section id="about"></section>
+        <section id="about">
+            <h1>Abount me</h1>
+            <p>I'm greeense. I love green color. And I AM ENGINEER.</p>
+            <div class="about__majors">
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fa-brands fa-java"></i>
+                    </div>
+                    <div class="major__title">JAVA</div>
+                    <div class="major__description"></div>
+                </div>
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fa-brands fa-python"></i>
+                    </div>
+                    <div class="major__title">python</div>
+                    <div class="major__description"></div>
+                </div>
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fa-brands fa-square-js"></i>
+                    </div>
+                    <div class="major__title">JS</div>
+                    <div class="major__description"></div>
+                </div>
+            </div>
+            <div class="about__jobs">
+                <div class="job">
+                    <img src="image/49471277.png" alt="Greeense's job photo" class="home__avatar"/>
+                     <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
+                    <p class="job__name"></p>
+                    <p class="job__period"></p>
+                </div>
+            </div>
+        </section>
         <!-- skills -->
         <section id="skills"></section>
         <!-- work -->
