--- a/main.html
+++ b/main.html
@@ -130,7 +130,50 @@
             </div>
         </section>
         <!-- work -->
-        <section id="work"></section>
+        <section id="work">
+            <h1>My work</h1>
+            <h3>Projects</h3>
+            <div class=""work__catagories">
+                <button class="category__btn">All
+                    <span class="category__count">8</span>
+                </button>
+                <button class="category__btn">Front
+                    <span class="category__count">3</span>
+                </button>
+                <button class="category__btn">Back-end
+                    <span class="category__count">3</span>
+                </button>
+                <button class="category__btn">Mobile
+                    <span class="category__count">2</span>
+                </button>
+            </div>
+
+            <div class="work__projects">
+                <a href="#" class="project" target="blank">
+                    <img src="프로젝트사진(project/imgfile)" alt="1" class="project__img"/>
+                    <div class="project__description">
+                        <h3>11</h3>
+                        <span>HTML,css,media</span>
+                    </div>
+                    <img src="프로젝트사진(project/imgfile)" alt="2" class="project__img"/>
+                    <div class="project__description">
+                        <h3>22</h3>
+                        <span>HTML,css,media</span>
+                    </div>
+                    <img src="프로젝트사진(project/imgfile)" alt="3" class="project__img"/>
+                    <div class="project__description">
+                        <h3>33</h3>
+                        <span>HTML,css,media</span>
+                    </div>
+                    <img src="프로젝트사진(project/imgfile)" alt="4" class="project__img"/>
+                    <div class="project__description">
+                        <h3>44</h3>
+                        <span>HTML,css,media</span>
+                    </div>
+                    <!-- png compression 사이트 이용 : 퀄리티 유징-->
+                </a>
+            </div>
+        </section>
         <!-- TESTIMONIALS -->
         <section id="testimonials"></section>
         <!-- contact -->
