--- a/main.html
+++ b/main.html
@@ -175,7 +175,20 @@
             </div>
         </section>
         <!-- TESTIMONIALS -->
-        <section id="testimonials"></section>
+        <section id="testimonials">
+            <h1>Testimonials</h1>
+            <h3>See what they say about me</h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img src="image/testimonial/people.png" alt="people" class="testimonials__avatar"/>
+                    <div class="testimonial__speech-bubble">
+                        <p>wow she is greatest developer!</p>
+                        <p>상사 / m2</p>
+                    </div>
+                </div>
+            </div>
+        
+        </section>
         <!-- contact -->
         <section id="contact"></section>
     </body>
