--- a/main.html
+++ b/main.html
@@ -190,6 +190,18 @@
         
         </section>
         <!-- contact -->
-        <section id="contact"></section>
+        <section id="contact">
+            <h1 class="contact__title">Contact</h1>
+            <h2 class="contact__email">grandse@naver.com</h2>
+            <div class="contact__links">
+                <a href="address" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank">
+                    <i class="fa fa-linkedin-square"></i>
+                </a>
+            </div>
+            <p class="contact__rights">All rights reserved</p>
+        </section>
     </body>
 </html>
