--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         <!-- navber -->
         <nav id="navbar">
             <div class="navbar__logo">
-                <i class="fab fa-diaspora"></i>
+                <i class="fa-solid fa-location-dot"></i>
                 <a href="#">GREEENSE</a>
             </div>
             <ul class="navbar__menu">
@@ -50,21 +50,21 @@
             <div class="about__majors">
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fa-brands fa-java"></i>
+                        <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <div class="major__title">JAVA</div>
                     <div class="major__description"></div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fa-brands fa-python"></i>
+                        <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <div class="major__title">python</div>
                     <div class="major__description"></div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fa-brands fa-square-js"></i>
+                        <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <div class="major__title">JS</div>
                     <div class="major__description"></div>
@@ -72,10 +72,9 @@
             </div>
             <div class="about__jobs">
                 <div class="job">
-                    <img src="image/49471277.png" alt="Greeense's job photo" class="home__avatar"/>
-                     <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
-                    <p class="job__name"></p>
-                    <p class="job__period"></p>
+                    <img src="image/jobs/M2.PNG" alt="Greeense's job photo" class="home__avatar"/>
+                    <p class="job__name">software enginner</p>
+                    <p class="job__period">2019/12 ~ 2023</p>
                 </div>
             </div>
         </section>
