--- a/main.html
+++ b/main.html
@@ -20,6 +20,11 @@
     -->
     <body>
         <!-- navber -->
+
+        <h1>Heading</h1>
+        <h2>Heading</h2>
+        <h3>Heading</h3>
+        <p>Pargraph</p>
         <nav id="navbar">
             <div class="navbar__logo">
                 <i class="fa-solid fa-location-dot"></i>
