--- a/main.html
+++ b/main.html
@@ -13,6 +13,9 @@
     </head>
     <script src="https://kit.fontawesome.com/49d19d6510.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
     <!--
@@ -31,7 +34,7 @@
                 <a href="#">GREEENSE</a>
             </div>
             <ul class="navbar__menu">
-                <li class="navbar__menu__item">HOME</li>
+                <li class="navbar__menu__item active">HOME</li>
                 <li class="navbar__menu__item">ABOUT</li>
                 <li class="navbar__menu__item">SKILLS</li>
                 <li class="navbar__menu__item">WORK</li>
