--- a/main.html
+++ b/main.html
@@ -52,27 +52,27 @@
             <button class="home__contact">Contact me!</button>
         </section>
         <!-- about -->
-        <section id="about">
+        <section id="about" class="section">
             <h1>Abount me</h1>
             <p>I'm greeense. I love green color. And I AM ENGINEER.</p>
             <div class="about__majors">
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fab fa-html5"></i>
                     </div>
                     <div class="major__title">JAVA</div>
                     <div class="major__description"></div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fab fa-html5"></i>
                     </div>
                     <div class="major__title">python</div>
                     <div class="major__description"></div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fab fa-html5"></i>
                     </div>
                     <div class="major__title">JS</div>
                     <div class="major__description"></div>
@@ -80,14 +80,16 @@
             </div>
             <div class="about__jobs">
                 <div class="job">
-                    <img src="image/jobs/M2.PNG" alt="Greeense's job photo" class="home__avatar"/>
-                    <p class="job__name">software enginner</p>
-                    <p class="job__period">2019/12 ~ 2023</p>
+                    <img class="job_image" src="image/jobs/M2.PNG" alt="Greeense's job photo" class="home__avatar"/>
+                    <div class="job__description">
+                        <p class="job__name">software enginner</p>
+                        <p class="job__period">2019/12 ~ 2023</p>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- skills -->
-        <section id="skills">
+        <section id="skills" class="section">
             <h1>Skills</h1>
             <h2>Greeense's skills</h2>
             <p>This is skills what Greeen has</p>
@@ -137,7 +139,7 @@
             </div>
         </section>
         <!-- work -->
-        <section id="work">
+        <section id="work" class="section">
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class=""work__catagories">
@@ -182,7 +184,7 @@
             </div>
         </section>
         <!-- TESTIMONIALS -->
-        <section id="testimonials">
+        <section id="testimonials" class="section">
             <h1>Testimonials</h1>
             <h3>See what they say about me</h3>
             <div class="testimonials">
@@ -197,7 +199,7 @@
         
         </section>
         <!-- contact -->
-        <section id="contact">
+        <section id="contact" class="section">
             <h1 class="contact__title">Contact</h1>
             <h2 class="contact__email">grandse@naver.com</h2>
             <div class="contact__links">
