--- a/main.html
+++ b/main.html
@@ -90,53 +90,56 @@
         </section>
         <!-- skills -->
         <section id="skills" class="section">
-            <h1>Skills</h1>
-            <h2>Greeense's skills</h2>
-            <p>This is skills what Greeen has</p>
-            <div class="skillset">
-                <div class="skillset__left">
-                    <h3 class="skillset__title">Skills</h3>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>HTML</span>
-                            <span>99%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
-                        </div>
+            <div class="section__container">
+                <h1>Skills</h1>
+                <h2>Greeense's skills</h2>
+                <p>This is skills what Greeen has</p>
+                <div class="skillset">
+                    <div class="skillset__left">
+                        <h3 class="skillset__title">Skills</h3>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>HTML</span>
+                                <span>99%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:99%;"></div>
+                            </div>
 
-                        <div class="skill__description">
-                            <span>JAVA</span>
-                            <span>66%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
-                        </div>
+                            <div class="skill__description">
+                                <span>JAVA</span>
+                                <span>66%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:66%;"></div>
+                            </div>
 
-                        <div class="skill__description">
-                            <span>JS</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
+                            <div class="skill__description">
+                                <span>JS</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:80%;"></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="skillset__right">
-                    <div class="tools">
-                        <h3 class="skillset__title">Tools</h3>
-                        <ul class="tools__list">
-                            <li><span>VisualStudio</span></li>
-                            <li><span>Python</span></li>
-                            <li><span>Java</span></li>
-                            <li><span>Myquery</span></li>
-                        </ul>
-                    </div>
-                    <div class="etc">
-                        <h3 class="skillset__title">Etc</h3>
+                    <div class="skillset__right">
+                        <div class="tools">
+                            <h3 class="skillset__title">Tools</h3>
+                            <ul class="tools__list">
+                                <li><span>VisualStudio</span></li>
+                                <li><span>Python</span></li>
+                                <li><span>Java</span></li>
+                                <li><span>Myquery</span></li>
+                            </ul>
+                        </div>
+                        <div class="etc">
+                            <h3 class="skillset__title">Etc</h3>
+                        </div>
                     </div>
                 </div>
             </div>
+            
         </section>
         <!-- work -->
         <section id="work" class="section">
