--- a/main.html
+++ b/main.html
@@ -145,8 +145,8 @@
         <section id="work" class="section">
             <h1>My work</h1>
             <h3>Projects</h3>
-            <div class=""work__catagories">
-                <button class="category__btn">All
+            <div class="work__catagories">
+                <button class="category__btn active">All
                     <span class="category__count">8</span>
                 </button>
                 <button class="category__btn">Front
