--- a/main.html
+++ b/main.html
@@ -192,10 +192,10 @@
             <h3>See what they say about me</h3>
             <div class="testimonials">
                 <div class="testimonial">
-                    <img src="image/testimonial/people.png" alt="people" class="testimonials__avatar"/>
+                    <img src="image/testimonial/people.png" alt="people" class="testimonial__avatar"/>
                     <div class="testimonial__speech-bubble">
                         <p>wow she is greatest developer!</p>
-                        <p>상사 / m2</p>
+                        <p><a>상사</a> / m2</p>
                     </div>
                 </div>
             </div>
