--- a/main.html
+++ b/main.html
@@ -53,7 +53,8 @@
         </section>
         <!-- about -->
         <section id="about" class="section">
-            <h1>Abount me</h1>
+            <div class="section__container">
+                <h1>Abount me</h1>
             <p>I'm greeense. I love green color. And I AM ENGINEER.</p>
             <div class="about__majors">
                 <div class="major">
@@ -86,6 +87,7 @@
                         <p class="job__period">2019/12 ~ 2023</p>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
         <!-- skills -->
@@ -143,7 +145,8 @@
         </section>
         <!-- work -->
         <section id="work" class="section">
-            <h1>My work</h1>
+            <div class="section__container">
+                <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__catagories">
                 <button class="category__btn active">All
@@ -185,21 +188,24 @@
                     <!-- png compression 사이트 이용 : 퀄리티 유징-->
                 </a>
             </div>
+            </div>
         </section>
         <!-- TESTIMONIALS -->
         <section id="testimonials" class="section">
-            <h1>Testimonials</h1>
-            <h3>See what they say about me</h3>
-            <div class="testimonials">
-                <div class="testimonial">
-                    <img src="image/testimonial/people.png" alt="people" class="testimonial__avatar"/>
-                    <div class="testimonial__speech-bubble">
-                        <p>wow she is greatest developer!</p>
-                        <p><a>상사</a> / m2</p>
+            <div class="section__container">
+                <h1>Testimonials</h1>
+                <h3>See what they say about me</h3>
+                <div class="testimonials">
+                    <div class="testimonial">
+                        <img src="image/testimonial/people.png" alt="people" class="testimonial__avatar"/>
+                        <div class="testimonial__speech-bubble">
+                            <p>wow she is greatest developer!</p>
+                            <p><a>상사</a> / m2</p>
+                        </div>
                     </div>
                 </div>
-            </div>
         
+            </div>
         </section>
         <!-- contact -->
         <section id="contact" class="section">
