CSS : final touch

--- a/main.html
+++ b/main.html
@@ -23,24 +23,27 @@
     -->
     <body>
         <!-- navber -->
-
-        <h1>Heading</h1>
-        <h2>Heading</h2>
-        <h3>Heading</h3>
-        <p>Pargraph</p>
         <nav id="navbar">
             <div class="navbar__logo">
                 <i class="fa-solid fa-location-dot"></i>
                 <a href="#">GREEENSE</a>
             </div>
-            <ul class="navbar__menu">
-                <li class="navbar__menu__item active">HOME</li>
-                <li class="navbar__menu__item">ABOUT</li>
-                <li class="navbar__menu__item">SKILLS</li>
-                <li class="navbar__menu__item">WORK</li>
-                <li class="navbar__menu__item">TEST</li>
-                <li class="navbar__menu__item">CONTACT</li>
-            </ul>
+            <div class="navbar__menu">
+                <ul class="navbar__menu">
+                    <li class="navbar__menu__item active">HOME</li>
+                    <li class="navbar__menu__item">ABOUT</li>
+                    <li class="navbar__menu__item">SKILLS</li>
+                    <li class="navbar__menu__item">WORK</li>
+                    <li class="navbar__menu__item">TEST</li>
+                    <li class="navbar__menu__item">CONTACT</li>
+                </ul>
+            </div>
+            
+            <!-- toggle button -->
+            <button class="navbar__toggle-btn">
+                <i class="fas fa-bars"></i>
+            </button>
+
         </nav>
         <!-- home -->
         <section id="home">
