--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
             <h2 class="home__description">
                 Engineer
             </h2>
-            <button class="home__contact">Contact me!</button>
+            <button class="home__contact" data-link="home__contact">Contact me!</button>
         </section>
         <!-- about -->
         <section id="about" class="section">
