js : navbar transparent

--- a/main.html
+++ b/main.html
@@ -47,12 +47,15 @@
         </nav>
         <!-- home -->
         <section id="home">
-            <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
-            <h1 class="home__title">Hello,<br/> I'm Greeense</h1>
-            <h2 class="home__description">
-                Engineer
-            </h2>
-            <button class="home__contact" data-link="home__contact">Contact me!</button>
+            <div class="home__container">
+                <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
+                <h1 class="home__title">Hello,<br/> I'm Greeense</h1>
+                <h2 class="home__description">
+                    Engineer
+                </h2>
+                <button class="home__contact" data-link="home__contact">Contact me!</button>
+            </div>
+            
         </section>
         <!-- about -->
         <section id="about" class="section">
