--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
                 <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
                 <h1 class="home__title">Hello,<br/> I'm Greeense</h1>
                 <h2 class="home__description">
-                    Engineer
+                    My job is Engineer & Devloper!
                 </h2>
                 <button class="home__contact" data-link="home__contact">Contact me!</button>
             </div>
@@ -65,24 +65,31 @@
             <div class="about__majors">
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-java"></i>
                     </div>
                     <div class="major__title">JAVA</div>
-                    <div class="major__description"></div>
+                    <div class="major__description">* main *</br>Using Java</div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
-                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-python"></i>
                     </div>
                     <div class="major__title">python</div>
-                    <div class="major__description"></div>
+                    <div class="major__description">learn Python</div>
+                </div>
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fab fa-js"></i>
+                    </div>
+                    <div class="major__title">JS</div>
+                    <div class="major__description">useing JavaScript</div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
                         <i class="fab fa-html5"></i>
                     </div>
-                    <div class="major__title">JS</div>
-                    <div class="major__description"></div>
+                    <div class="major__title">HTML5</div>
+                    <div class="major__description">using Html5</div>
                 </div>
             </div>
             <div class="about__jobs">
@@ -106,6 +113,7 @@
                     <div class="skillset__left">
                         <h3 class="skillset__title">Skills</h3>
                         <div class="skill">
+                            </br>
                             <div class="skill__description">
                                 <span>HTML</span>
                                 <span>99%</span>
@@ -113,7 +121,6 @@
                             <div class="skill__bar">
                                 <div class="skill__value" style="width:99%;"></div>
                             </div>
-
                             <div class="skill__description">
                                 <span>JAVA</span>
                                 <span>66%</span>
@@ -121,7 +128,6 @@
                             <div class="skill__bar">
                                 <div class="skill__value" style="width:66%;"></div>
                             </div>
-
                             <div class="skill__description">
                                 <span>JS</span>
                                 <span>80%</span>
@@ -129,16 +135,30 @@
                             <div class="skill__bar">
                                 <div class="skill__value" style="width:80%;"></div>
                             </div>
+                            <div class="skill__description">
+                                <span>Python</span>
+                                <span>20%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:20%;"></div>
+                            </div>
+                            <div class="skill__description">
+                                <span>SQL</span>
+                                <span>50%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:50%;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="skillset__right">
                         <div class="tools">
                             <h3 class="skillset__title">Tools</h3>
                             <ul class="tools__list">
-                                <li><span>VisualStudio</span></li>
-                                <li><span>Python</span></li>
-                                <li><span>Java</span></li>
-                                <li><span>Myquery</span></li>
+                                <li><span>Visual Code</span></li>
+                                <li><span>Eclipse</span></li>
+                                <li><span>MySQL</span></li>
+                                <li><span>ORACLE DB</span></li>
                             </ul>
                         </div>
                         <div class="etc">
@@ -154,42 +174,48 @@
             <div class="section__container">
                 <h1>My work</h1>
             <h3>Projects</h3>
-            <div class="work__catagories">
-                <button class="category__btn active">All
+            <div class="work__categories">
+                <button class="category__btn active" data-filter="*">All
                     <span class="category__count">8</span>
                 </button>
-                <button class="category__btn">Front
+                <button class="category__btn" data-filter="program">Program
                     <span class="category__count">3</span>
                 </button>
-                <button class="category__btn">Back-end
+                <button class="category__btn" data-filter="website">WebSite
                     <span class="category__count">3</span>
                 </button>
-                <button class="category__btn">Mobile
+                <button class="category__btn" data-filter="mobile">Mobile
                     <span class="category__count">2</span>
                 </button>
             </div>
 
             <div class="work__projects">
-                <a href="#" class="project" target="blank">
-                    <img src="프로젝트사진(project/imgfile)" alt="1" class="project__img"/>
+                <a href="#" class="project" target="blank" data-type="program">
+                    <img src="image/project1.png" alt="1" class="project__img"/>
                     <div class="project__description">
-                        <h3>11</h3>
-                        <span>HTML,css,media</span>
+                        <h3>Quiz game</h3>
+                        <span>C</span>
                     </div>
-                    <img src="프로젝트사진(project/imgfile)" alt="2" class="project__img"/>
+                </a>
+                <a href="#" class="project" target="blank" data-type="website">
+                    <img src="image/project2.png" alt="2" class="project__img"/>
                     <div class="project__description">
-                        <h3>22</h3>
-                        <span>HTML,css,media</span>
+                        <h3>WebSite</h3>
+                        <span>HTML,css,java,javaScript</span>
                     </div>
-                    <img src="프로젝트사진(project/imgfile)" alt="3" class="project__img"/>
+                </a>
+                <a href="#" class="project" target="blank" data-type="website">
+                    <img src="image/project3.png" alt="3" class="project__img"/>
                     <div class="project__description">
-                        <h3>33</h3>
-                        <span>HTML,css,media</span>
+                        <h3>WebSite</h3>
+                        <span>HTML,css,java,javaScript,Spring,Oracle DB</span>
                     </div>
-                    <img src="프로젝트사진(project/imgfile)" alt="4" class="project__img"/>
+                </a>
+                <a href="#" class="project" target="blank" data-type="mobile">
+                    <img src="image/project4.png" alt="4" class="project__img"/>
                     <div class="project__description">
-                        <h3>44</h3>
-                        <span>HTML,css,media</span>
+                        <h3>Samsung paperless</h3>
+                        <span>HTML,css,nodeJS,Java,javaScript</span>
                     </div>
                     <!-- png compression 사이트 이용 : 퀄리티 유징-->
                 </a>
@@ -227,5 +253,11 @@
             </div>
             <p class="contact__rights">All rights reserved</p>
         </section>
+
+        <!--Arrow-->
+        <button class="arrow-up">
+            <i class="fas fa-arrow-up"> </i>
+        </button>
+
     </body>
 </html>
