--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
                 <a href="#">GREEENSE</a>
             </div>
             <div class="navbar__menu">
-                <ul class="navbar__menu">
+                <ul class="navbar__menu open">
                     <li class="navbar__menu__item active" data-link="#home">HOME</li>
                     <li class="navbar__menu__item" data-link="#about">ABOUT</li>
                     <li class="navbar__menu__item" data-link="#skills">SKILLS</li>
