--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <nav id="navbar">
             <div class="navbar__logo">
                 <i class="fa-solid fa-location-dot"></i>
-                <a href="#">GREEENSE</a>
+                <a href="#">★ GREEENSE ★</a>
             </div>
             <div class="navbar__menu">
                 <ul class="navbar__menu open">
@@ -49,7 +49,7 @@
         <section id="home">
             <div class="home__container">
                 <img src="image/49471277.png" alt="Greeense's profile photo" class="home__avatar"/>
-                <h1 class="home__title">Hello,<br/> I'm Greeense</h1>
+                <h1 class="home__title">Hello,<br/>I'm Greeense</h1>
                 <h2 class="home__description">
                     My job is Engineer & Devloper!
                 </h2>
@@ -61,7 +61,7 @@
         <section id="about" class="section">
             <div class="section__container">
                 <h1>Abount me</h1>
-            <p>I'm greeense. I love green color. And I AM ENGINEER.</p>
+            <p>I'm greeense. I love green color. And I AM ENGINEER & Developer. These is my skills.</p>
             <div class="about__majors">
                 <div class="major">
                     <div class="major__icon">
@@ -96,8 +96,8 @@
                 <div class="job">
                     <img class="job_image" src="image/jobs/M2.PNG" alt="Greeense's job photo" class="home__avatar"/>
                     <div class="job__description">
-                        <p class="job__name">software enginner</p>
-                        <p class="job__period">2019/12 ~ 2023</p>
+                        <p class="job__name">Crownix SmartForm Software engineer</p>
+                        <p class="job__period">2019/12 ~ now</p>
                     </div>
                 </div>
             </div>
