--- a/main.html
+++ b/main.html
@@ -25,8 +25,8 @@
         <!-- navber -->
         <nav id="navbar">
             <div class="navbar__logo">
-                <i class="fa-solid fa-location-dot"></i>
-                <a href="#">★ GREEENSE ★</a>
+                <i class="fas fa-globe"></i>
+                <a href="#">GREEENSE</a>
             </div>
             <div class="navbar__menu">
                 <ul class="navbar__menu open">
